# chimera

./: LICENSE  PUSH_INSTRUCTIONS.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
Downloads/GreyHatTeam5-main-3/: .env.template  AGENT_WRITEUP.md  COMPETITION_SUMMARY.md  CONTRIBUTORS.md  pyproject.toml  test_greyhat_challenge.py
Downloads/GreyHatTeam5-main-3/agent/: agent.py  ensemble_agent.py  optimized_agent.py  reasoning_agent.py
Downloads/GreyHatTeam5-main-3/challenges/complex_1/: challenge.json
Downloads/GreyHatTeam5-main-3/challenges/complex_1/artifacts/: README.txt  config.json  encrypted_message.txt  network_scan.sh  obfuscated_script.py  strange_binary
Downloads/GreyHatTeam5-main-3/challenges/curious_vault/: challenge.json
Downloads/GreyHatTeam5-main-3/challenges/curious_vault/artifacts/: README.txt  vault_unlocker.py
Downloads/GreyHatTeam5-main-3/challenges/greyhat_misdirection/: WRITEUP.md  challenge.json
Downloads/GreyHatTeam5-main-3/challenges/greyhat_misdirection/artifacts/: README.md  blockchain_ledger.json  quantum_cipher.py
Downloads/GreyHatTeam5-main-3/docker/agent/: Dockerfile
Downloads/GreyHatTeam5-main-3/helper/: tiered_llm_manager.py  validation_layer.py
Downloads/GreyHatTeam5-main-3/knowledge_base/: crypto_knowledge.xml  pwn_knowledge.xml  rev_knowledge.xml  web_knowledge.xml
Downloads/GreyHatTeam5-main-3/mcp_tools/: ghidra_mcp.py  kali_mcp.py
configs/experiments/: phase1_baseline.yaml
docker/chat-service/: Dockerfile  package.json  server.js
docker/git-server/: sshd_config
docker/ticket-manager/: Dockerfile
example_project/backend/: app.py  database.db
example_project/frontend/: app.js
f1/: config.py  index.html
f1/analysis_engine/: QUICKSTART.md  README.md  SETUP_COMPLETE.md  fastf1_fetcher.py  gemini_analyzer.py  main.py  report_generator.py  requirements.txt
f1/react-dashboard/: INTEGRATION_GUIDE.md  PROJECT_SUMMARY.md  README.md  SETUP.md  index.html  launch.sh  package-lock.json  package.json
project_chimera/: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Research_Summary.md  requirements.txt  run_hierarchical_simulation.py  run_simulation.py  setup.sh  test_api_keys.py  test_enhanced_monitor.py  test_hierarchical_monitor.py
project_chimera/analysis/: long-horizon-analysis.md
project_chimera/example_project/: README.md
scripts/: setup_environment.sh
tx-f1/F1-Animation/: driver-animator.js  index.html  (+5 more)
(+108 files in other folders)
